# port-libcurl

./: README.md  all_cves.json  dependents.json  relevant_cves.json  test-original.sh
.plan/: plan.md  workflow-structure.yaml
.plan/phases/: 01-foundation-bridge.md  02-public-abi.md  03-harness-foundation.md  04-transfer-core.md  05-http-security.md  06-backends-protocols.md  07-unit-port.md  08-performance.md  09-packaging.md  10-final-hardening.md
original/: configure.ac  curl-config.in
original/.pc/: applied-patches
original/.pc/Remove-curl-s-LDFLAGS-from-curl-config-static-libs.patch/: curl-config.in
original/debian/patches/: 08_enable-zsh.patch  90_gnutls.patch  CVE-2024-0853.patch  CVE-2024-11053-pre1.patch  CVE-2024-11053.patch  CVE-2024-2004-pre1.patch  CVE-2024-2004.patch  CVE-2024-2398.patch  CVE-2024-7264-pre1.patch  CVE-2024-7264.patch  CVE-2024-8096.patch  CVE-2024-9681.patch  CVE-2025-0167.patch  CVE-2025-10148.patch  CVE-2025-14017.patch  CVE-2025-14524.patch  CVE-2025-14819.patch  CVE-2025-15079.patch  CVE-2025-15224.patch  CVE-2026-1965-1.patch  CVE-2026-1965-2.patch  CVE-2026-3783.patch  CVE-2026-3784.patch  build-Divide-mit-krb5-gssapi-link-flags-between-LDFLAGS-a.patch  series
original/debian/upstream/: signing-key.asc
original/lib/: Makefile.am  curl_sasl.c  netrc.c  setopt.c  url.c  urldata.h
original/lib/vtls/: gtls.c  openssl.c  x509asn1.c
original/tests/certs/: Server-localhost-gt-sv.pem
original/tests/data/: DISABLED  Makefile.inc  test1300  test1302  test1303  test1304  test1305  test1307  test1309  test1323  test1330  test1394  test1395  test1399  test1600  test1601  test1602  test1603  test1604  test1605  test1607  test1608  test1609  test1610  test1611  test1612  test1614  test1620  test1621  test1650  test1651  test1652  test1653  test1654  test1655  test1656  test1660  test1661  test2006  test2600  (+6 more)
original/tests/libtest/: Makefile.am  Makefile.in  Makefile.inc  lib1302.c  lib1304.c  lib1330.c  lib1397.c  lib1605.c  lib1607.c  lib1608.c  lib1609.c  lib1614.c  (+7 more)
packaging/: package.env
safe/: Cargo.toml  build.rs
safe/.cargo/: cc-linker-wrapper.sh  config.toml
safe/abi/: libcurl-gnutls.map  libcurl-openssl.map
safe/benchmarks/: README.md  scenarios.json  thresholds.json
safe/benchmarks/harness/: easy_loop.c  multi_parallel.c
safe/c_shim/: forwarders.c  http2_transport.c  mprintf.c  ssh_backend.c  tls_backend.c  variadic.c
safe/compat/: CMakeLists.txt  generated-sources.cmake  link-manifest.json
safe/compat/ldap-devpkg/include/: ldap.h  ldap_utf8.h  ldif.h
safe/debian/: changelog  control  rules
safe/debian/patches/: series
safe/docs/: performance.md
safe/metadata/: abi-manifest.json  cve-manifest.json  cve-to-test.json  test-manifest.json
safe/scripts/: benchmark-local.sh  build-compat-consumers.sh  build-reference-curl.sh  compare-benchmarks.py  compat_harness.py  export-tracked-tree.sh  generate-bindings.py  generate-manifests.py  http-fixture.py  http-fixtures.sh  run-curated-libtests.sh  run-curl-tool-smoke.sh  run-http-client-tests.sh  run-ldap-devpkg-test.sh  run-link-compat.sh  run-public-abi-smoke.sh  run-upstream-tests.sh  vendor-compat-assets.sh  verify-abi-manifest.sh  verify-cve-coverage.py  verify-export-names.sh  verify-manifests.py  verify-public-headers.sh  verify-symbol-versions.sh
safe/src/: alloc.rs  doh.rs  form.rs  global.rs  idn.rs  lib.rs  mime.rs  rand.rs  share.rs  slist.rs  urlapi.rs  version.rs  ws.rs
safe/src/abi/: connect_only.rs  easy.rs  generated.rs  multi.rs  public_types.rs  share.rs  url.rs
safe/src/conn/: cache.rs  filter.rs  mod.rs
safe/src/dns/: mod.rs
safe/src/easy/: handle.rs  mod.rs  options.rs  perform.rs  reference.rs
safe/src/http/: altsvc.rs  auth.rs  cookies.rs  headers_api.rs  hsts.rs  mod.rs  proxy.rs  request.rs  response.rs
safe/src/multi/: mod.rs  poll.rs  state.rs
safe/src/protocols/: dict.rs  file.rs  ftp.rs  gopher.rs  imap.rs  ldap.rs  mod.rs  mqtt.rs  pop3.rs  rtsp.rs  smb.rs  smtp.rs  telnet.rs  tftp.rs
safe/src/ssh/: mod.rs
safe/src/tls/: certinfo.rs  gnutls.rs  mod.rs  openssl.rs
safe/src/transfer/: mod.rs
safe/src/vquic/: mod.rs
safe/tests/: abi_layout.rs  cve_regressions.rs  port-map.json  public_abi.rs  unit_port.rs
safe/tests/cve_cases/: cookie_origin_scope.json  headers_api_semantics.json  hsts_domain_scope.json  http_content_encoding_limit.json  http_method_state.json  proxy_auth_reuse.json  redirect_credentials.json  reference_backend_concurrency.json  reference_backend_method_state.json  reference_backend_parsing.json  reference_backend_permissions.json  reference_backend_platform.json  reference_backend_resource.json  reference_backend_ssh_auth.json  reference_backend_transport.json  response_header_limit.json  websocket_mask_entropy.json  websocket_recv_progress.json
safe/tests/smoke/: public_api_smoke.c
safe/tests/unit_port_cases/: unit1300.json  unit1302.json  unit1303.json  unit1304.json  unit1305.json  unit1307.json  unit1308.json  unit1309.json  unit1323.json  unit1330.json  unit1394.json  unit1395.json  unit1396.json  unit1397.json  unit1398.json  unit1399.json  unit1600.json  unit1601.json  unit1602.json  unit1603.json  unit1604.json  unit1605.json  unit1606.json  unit1607.json  unit1608.json  unit1609.json  unit1610.json  unit1611.json  unit1612.json  unit1614.json  unit1620.json  unit1621.json  unit1650.json  unit1651.json  unit1652.json  unit1653.json  unit1654.json  unit1655.json  unit1656.json  unit1660.json  (+6 more)
(+16 files in other folders)
